# tg-silent-secretary-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SYSTEM_ANALYSIS.md  agents.md  domain-engineer.yaml  miniapp-engineer.yaml  pyproject.toml  qa-engineer.yaml
.claude/: application-engineer.yaml  bot-interface-engineer.yaml  persistence-engineer.yaml  platform-engineer.yaml  recognition-engineer.yaml  technical-writer.yaml
docs/: BUSINESS_ANALYSIS.md
src/bot/: config.py  main.py
src/bot/handlers/: business.py  connection.py
tests/: test_handlers.py
