[project]
name = "tg-silent-secretary-bot"
version = "0.1.0"
description = "Telegram Business secretary bot that silently marks incoming messages as read"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
